--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,9 +16,17 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+     install:
+      - pip install codecov
+
+
+    script:
+     - coverage run tests.py
+
+     after_success:
+       - codecov
+       
     - name: Test with pytest
       run: |
         pytest
-    - name: Coverage test with pytest
-      run: |
-        coverage run --branch -m pytest; coverage html
+
