--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,5 +31,7 @@ jobs:
       run: |
         pytest
     - name: Coverage test
-      run: coverage report -m
+      run: |
+      coverage run --source=. -m pytest
+      coverage -m report
 
